[gd_scene load_steps=23 format=3 uid="uid://dq0olw7np6bt2"]

[ext_resource type="Script" path="res://Frog.gd" id="1_7th03"]
[ext_resource type="Texture2D" uid="uid://dirxhgn83wxso" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/frog-idle.png" id="1_iv6jm"]
[ext_resource type="Texture2D" uid="uid://6nfl2wuujl7m" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/enemy-deadth.png" id="1_wrq62"]
[ext_resource type="Texture2D" uid="uid://cdgcpdtnmgc1c" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/frog-jump.png" id="2_27l1x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1i8cy"]
size = Vector2(27, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxjwb"]
atlas = ExtResource("1_wrq62")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6c58"]
atlas = ExtResource("1_wrq62")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihfr6"]
atlas = ExtResource("1_wrq62")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_evd3w"]
atlas = ExtResource("1_wrq62")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_anhl7"]
atlas = ExtResource("1_wrq62")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_jowfo"]
atlas = ExtResource("1_wrq62")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu02p"]
atlas = ExtResource("1_iv6jm")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6qem"]
atlas = ExtResource("1_iv6jm")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr8ck"]
atlas = ExtResource("1_iv6jm")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sm5h"]
atlas = ExtResource("1_iv6jm")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_br48i"]
atlas = ExtResource("2_27l1x")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft7aq"]
atlas = ExtResource("2_27l1x")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkyxu"]
atlas = ExtResource("2_27l1x")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ttcsy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxjwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6c58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihfr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evd3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anhl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jowfo")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu02p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6qem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr8ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sm5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu02p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu02p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu02p")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_br48i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft7aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkyxu")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1044h"]
radius = 8.60632

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2c52h"]
size = Vector2(0.583913, 0.319511)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jakby"]
size = Vector2(1.42994, 0.692273)

[node name="Frog" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_7th03")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -8)
shape = SubResource("RectangleShape2D_1i8cy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -11)
sprite_frames = SubResource("SpriteFrames_ttcsy")
animation = &"Idle"

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
position = Vector2(1.5, -9.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
scale = Vector2(-20.2806, 18.7787)
shape = SubResource("CircleShape2D_1044h")

[node name="PlayerDeath" type="Area2D" parent="."]
position = Vector2(2, -11)
scale = Vector2(1.52, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(-0.657895, -6)
rotation = -3.14159
scale = Vector2(20.2806, -18.7787)
shape = SubResource("RectangleShape2D_2c52h")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(1.5, -6.49999)
rotation = -3.14159
scale = Vector2(20.2806, -18.7787)
shape = SubResource("RectangleShape2D_jakby")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
